--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal-video": "^2.0.1",
+    "react-player": "^3.4.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sass": "^1.49.7",
